# esercizi-funzionali-graduali

./: .gitignore  .travis.yml  README.md  build.gradle  build.sbt  composer.json  pom.xml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
haskell/: README.md  esercizi-funzionali-graduali.cabal
haskell/src/: LambdaGardenDue.hs
haskell/src/KataZero/: KataZero.hs
haskell/src/Katas/: KataZero.hs
haskell/test/: LambdaGardenDueSpec.hs  Spec.hs
haskell/test/KataZero/: KataZeroSpec.hs
haskell/test/Katas/: KataZeroSpec.hs
java/: .gitignore  build.gradle  settings.gradle
java/src/main/resources/: step_00.txt
java/src/main/scala/: Step02Scala.scala
js/: README.md  package.json
js/src/: .#App.js  App.js  App.test.js  AppImp.js  AppImp.test.js  Benchmarks.js
katas/: step_00.txt
php/: composer.json  phpbench.json  phpspec.yml
php/src/LambdaRoma/KataZero/: KataZero.php  KataZeroFP.php  KataZeroLaravelCollection.php  KataZeroQaribu.php  UnoImperativo.php
php/src/benchmarks/LambdaRoma/: KataZeroBench.php  KataZeroFPBench.php  KataZeroLaravelCollectionBench.php  KataZeroQaribuBench.php
project/: plugins.sbt
src/LambdaRoma/KataZero/: UnoImperativo.php
src/main/resources/: step_00.txt  step_01.txt  step_02.txt  step_03.txt
src/main/scala/: LambdaGardenDue.scala  Step00.scala  Step01.scala  Step02.scala  Step02Scala.scala  Step03.scala  Step04.scala
src/test/scala/: Step00Spec.scala  Step01Spec.scala  Step02Spec.scala  Step03Spec.scala  Step04Spec.scala
tracce-esercizi/: esercizio_01.txt  filetto.txt  step_00.txt  step_04.txt
(+55 files in other folders)
