name:                esercizi-funzionali-graduali
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/esercizi-funzionali-graduali#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, KataZero.KataZero
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable esercizi-funzionali-graduali-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , esercizi-funzionali-graduali
  default-language:    Haskell2010

test-suite esercizi-funzionali-graduali-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , esercizi-funzionali-graduali
                     , hspec == 2.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:      KataZero.KataZeroSpec

source-repository head
  type:     git
  location: https://github.com/githubuser/esercizi-funzionali-graduali
